--- a/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -1917,8 +1917,12 @@ admin_cloud_attachment_render:
 
 # 添加云直播
 admin_setting_cloud_edulive:
-    pattern:  /setting/cloud/edulive
+    pattern:  /cloud/edulive
     defaults: { _controller: TopxiaAdminBundle:EduCloud:live }
+
+admin_cloud_setting_edulive:
+    pattern:  /cloud/edulive/setting
+    defaults: { _controller: TopxiaAdminBundle:EduCloud:liveSetting }
 
 # 添加重建索引模态框
 admin_cloud_buildindex_modal:
