云短信权限配置，js未调整

--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -548,6 +548,9 @@ admin:
                             name: 云短信
                             router_name: admin_edu_cloud_sms
                             disable: true
+                        admin_edu_cloud_setting_sms:
+                            name: 设置
+                            disable: true
                 # admin_edu_cloud_email:
                 #     name: 云邮件设置
                 #     children:
