--- a/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -1801,6 +1801,10 @@ admin_edu_cloud_email:
     permissions: [admin_edu_cloud_email_seeting]
 
 admin_edu_cloud_search:
+    pattern: /edu_cloud/search
+    defaults: { _controller: TopxiaAdminBundle:EduCloud:search }
+
+admin_edu_cloud_setting_search:
     pattern: /setting/edu_cloud/search
     defaults: { _controller: TopxiaAdminBundle:EduCloud:searchSetting }
 
