--- a/package.json
+++ b/package.json
@@ -60,9 +60,10 @@
     "jquery-validation": "^1.15.1",
     "reset.css": "^2.0.2",
     "respond.js": "^1.4.2",
-    "es6-event-emitter": "^1.5.2",
-    "swfobject": "^2.2.1",
-    "es-swfobject": "^3.0.0"
+    "es-swfobject": "^3.0.0",
+    "es-messenger":"^2.1.0",
+    "video.js": "^5.0.0",
+    "mediaelement": "^2.23.4"
   },
   "scripts": {
     "start": "npm run dev",
