--- a/src/WebBundle/Resources/config/services.yml
+++ b/src/WebBundle/Resources/config/services.yml
@@ -2,6 +2,10 @@ parameters:
 #    classroom.example.class: Classroom\ClassroomBundle\Example
 
 services:
+    task_event_subscriber:
+        class: Biz\Task\Event\EventSubscriber
+        tags:
+            - { name: codeages_plugin.event.subscriber }
 #    classroom.example:
 #        class: %classroom.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
