feat: #231123 update gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ stages:
 variables:
   MYSQL_DATABASE: edusoho_test
   MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-  FROM_VERSION: 22.4.7
-  VERSION: 23.1.1
+  FROM_VERSION: 23.4.1
+  VERSION: 23.4.2
   H5VERSION: release/22.2.3
   STOPPED: "false"
 
@@ -297,27 +297,35 @@ Api Test With 7.1:
       - $REPOSITORY == "main"
       - $STOPPED == "true"
 
-Build upgrade package:
+.Build upgrade package:
   stage: build
   image: codeages/ci-php71
-  script:
-    - git add .
-    - git stash
-    - git checkout v${FROM_VERSION}
-    - git pull
-    - git checkout release/${VERSION}
-    - git pull
-    - git clone -b master --single-branch http://gitlab-ci-token:${CI_JOB_TOKEN}@${GITLAB_HOST}/edusoho/upgradescripts.git scripts
-    - git clone http://gitlab-ci-token:${CI_JOB_TOKEN}@${GITLAB_HOST}/edusoho/edusoho-h5.git
+  before_script:
     - npm install -g n
-    - n 12.22.7
+    - n 12.22.12
     - node -v
     - yarn config set registry https://registry.npm.taobao.org
     - rm -rf app/cache
+    - git clone -b master --single-branch http://gitlab-ci-token:${CI_JOB_TOKEN}@${GITLAB_HOST}/edusoho/upgradescripts.git scripts
+    - git checkout release/${VERSION}
+    - git pull
+    - cp app/config/parameters.yml.dist app/config/parameters.yml
+  artifacts:
+    paths:
+      - build/
+    expire_in: 30 mins
+  only:
+    - /^release\/.*$/
+  when: manual
+
+Build h5, compile and build upgrade package:
+  extends: '.Build upgrade package'
+  script:
+    - git clone http://gitlab-ci-token:${CI_JOB_TOKEN}@${GITLAB_HOST}/edusoho/edusoho-h5.git
     - cd edusoho-h5
     - git checkout ${H5VERSION}
     - git pull
-    - cp build/env.js.example  build/env.js
+    - cp build/env.js.example build/env.js
     - rm -rf node_modules
     - rm -rf dist
     - rm -rf ./../web/h5/*
@@ -333,11 +341,23 @@ Build upgrade package:
     - app/console assets:install
     # 生成js语言包
     - app/console trans:dump-js
-    - ls web/h5/static/css
-    - app/console  build:upgrade-package ${FROM_VERSION} ${VERSION}
-  artifacts:
-    paths:
-      - build/
-    expire_in: 30 mins
-  only:
-    - /^package\/.*$/
+    - if [[ `git status --porcelain` ]]; then git config user.email "builder@edusoho.com"; git config user.name "builder"; git add .; git commit -m 'compile'; fi;
+    - app/console build:upgrade-package ${FROM_VERSION} ${VERSION}
+
+Compile and build upgrade package:
+  extends: '.Build upgrade package'
+  script:
+    - rm -rf app/cache node_modules
+    - yarn
+    - npm run compile
+    - app/console assets:install
+    - app/console trans:dump-js
+    - if [[ `git status --porcelain` ]]; then git config user.email "builder@edusoho.com"; git config user.name "builder"; git add .; git commit -m 'compile'; fi;
+    - app/console build:upgrade-package ${FROM_VERSION} ${VERSION}
+
+Build upgrade package:
+  extends: '.Build upgrade package'
+  before_script:
+    - git clone -b master --single-branch http://gitlab-ci-token:${CI_JOB_TOKEN}@${GITLAB_HOST}/edusoho/upgradescripts.git scripts
+    - cp app/config/parameters.yml.dist app/config/parameters.yml
+  script: app/console build:upgrade-package ${FROM_VERSION} ${VERSION}
