feat: #101644 课程-增加已下架状态

--- a/src/AppBundle/Resources/config/dict.en.yml
+++ b/src/AppBundle/Resources/config/dict.en.yml
@@ -7,7 +7,8 @@ searchResultType:
     article: Article
 
 courseStatus:
-    draft: Unpublished
+    draft: draft
+    unpublished: Unpublished
     published: Published
     closed: Closed
 goodsStatus:
