feat: #101645 班级题库加入下架数据联动

--- a/src/AppBundle/Resources/config/dict.en.yml
+++ b/src/AppBundle/Resources/config/dict.en.yml
@@ -32,6 +32,7 @@ openCourseCategory:
 
 classroomStatus:
     draft: Unpublished
+    unpublished: Unpublished
     published: Published
     closed: Closed
 
