--- a/src/AppBundle/Resources/config/menus_admin_v2.yml
+++ b/src/AppBundle/Resources/config/menus_admin_v2.yml
@@ -1652,6 +1652,14 @@ admin_v2:
                                 admin_v2_logs_prod:
                                     name: admin_v2.system.logs.logs_prod_tab
                                     disable: true
+                        # 系统API设置
+                        admin_v2_api_settings:
+                            name: admin_v2.system.api_setting_menu
+                            children:
+                                admin_v2_API_setting:
+                                    name: admin_v2.system.api_setting_basic_tab
+                                    disable: true
+                                    router_name: admin_v2_api_setting
                         # 安全设置
                         admin_v2_security:
                             name: admin_v2.system.security_menu
@@ -1664,6 +1672,7 @@ admin_v2:
                                     name: admin_v2.system.post_num_tab
                                 admin_v2_anti_fraud_reminder_setting:
                                     name: admin_v2.system.anti_fraud_reminder_tab
+
                         admin_v2_sms_defence:
                             name: admin_v2.system.sms_defence_menu
                             visible: false
