--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -3546,6 +3546,16 @@ question_parse_progress:
     path: '/question/parse_progress/{token}'
     defaults:
       _controller: 'AppBundle:Question/Manage:parseProgress'
+question_teacher_ai_analysis:
+  path: '/question/ai_analysis'
+  defaults:
+    _controller: 'AppBundle:Question/QuestionAIAnalysis:generate'
+  methods:
+    - POST
+question_student_ai_analysis:
+  path: '/question/ai_analysis/{token}'
+  defaults:
+    _controller: 'AppBundle:Question/QuestionAIAnalysis:generateWithToken'
 subject_edit_template:
     path: '/subject/edit/{type}'
     methods:
