--- a/src/AppBundle/Resources/config/routing_admin_v2.yml
+++ b/src/AppBundle/Resources/config/routing_admin_v2.yml
@@ -797,6 +797,10 @@ admin_v2_question_bank_category_sort:
         - POST
     permissions:
         - admin_v2_question_bank
+admin_v2_question_ai_analysis:
+    path: '/question_bank/ai_analysis'
+    defaults:
+      _controller: 'AppBundle:AdminV2/Teach/QuestionAIAnalysis:setting'
 admin_v2_invite_record:
     path: '/invite/record'
     defaults:
