--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -3667,6 +3667,10 @@ question_bank_manage_import_intro:
     path: '/question_bank/import_intro'
     defaults:
         _controller: 'AppBundle:QuestionBank/Question:importIntro'
+question_bank_manage_ai_analysis_intro:
+    path: '/question_bank/ai_analysis_intro'
+    defaults:
+        _controller: 'AppBundle:QuestionBank/Question:aiAnalysisIntro'
 question_bank_manage_question_import:
     path: '/question_bank/{id}/question/import'
     defaults:
