--- a/src/AppBundle/Resources/config/routing_admin_v2.yml
+++ b/src/AppBundle/Resources/config/routing_admin_v2.yml
@@ -42,6 +42,16 @@ admin_v2_announcement_from_platform:
     path: '/announcement_from_platform'
     defaults:
         _controller: 'AppBundle:AdminV2/Default:getAnnouncementFromPlatform'
+admin_v2_ai_survey:
+  path: '/ai_survey'
+  defaults:
+    _controller: 'AppBundle:AdminV2/AI:survey'
+admin_v2_ai_feature_like:
+  path: '/ai_feature_like'
+  defaults:
+    _controller: 'AppBundle:AdminV2/Ai:like'
+  methods:
+    - POST
 admin_v2_multi_class_data_overview:
     path: '/multi_class/overview'
     defaults:
