feat: #240606 ai弹窗样式优化

--- a/src/AppBundle/Resources/config/routing_admin_v2.yml
+++ b/src/AppBundle/Resources/config/routing_admin_v2.yml
@@ -53,7 +53,7 @@ admin_v2_ai_apply:
 admin_v2_ai_like_feature:
   path: '/ai_like_feature'
   defaults:
-    _controller: 'AppBundle:AdminV2/Ai:likeFeature'
+    _controller: 'AppBundle:AdminV2/AI:likeFeature'
   methods:
     - POST
 admin_v2_multi_class_data_overview:
