--- a/package.json
+++ b/package.json
@@ -128,5 +128,8 @@
     "test:cover": "babel-node ./node_modules/.bin/babel-istanbul cover _mocha -- tests/Js/* -R spec --recursive && open coverage/lcov-report/index.html",
     "test:simple": "mocha --recursive --require babel-core/register --reporter dot",
     "commitmsg": "es-commit-msg-validator"
+  },
+  "volta": {
+    "node": "16.20.2"
   }
 }
