--- a/vue3/babel.config.json
+++ b/vue3/babel.config.json
@@ -1,20 +1,27 @@
 {
   "presets": [
-		"@babel/preset-env"
+    "@babel/preset-env"
   ],
   "plugins": [
-    ["import", { "libraryName": "ant-design-vue", "libraryDirectory": "es", "style": true }],
-		[
-			"module-resolver",
-			{
-				"root": [
-					"./"
-				],
-				"alias": {
-					"common": "../app/Resources/static-src/common",
-					"app": "../app/Resources/static-src/app"
-				}
-			}
-		]
-	]
+    [
+      "import",
+      {
+        "libraryName": "ant-design-vue",
+        "libraryDirectory": "es",
+        "style": true
+      }
+    ],
+    [
+      "module-resolver",
+      {
+        "root": [
+          "./"
+        ],
+        "alias": {
+          "common": "../app/Resources/static-src/common",
+          "app": "../app/Resources/static-src/app"
+        }
+      }
+    ]
+  ]
 }
