--- a/vue3/package.json
+++ b/vue3/package.json
@@ -8,20 +8,21 @@
   },
   "packageManager": "npm",
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@babel/polyfill": "^7.12.1",
     "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "@ckeditor/ckeditor5-vue": "^5.1.0",
-    "ant-design-vue": "^4.0.8",
+    "ant-design-vue": "^4.2.3",
     "axios": "^1.6.3",
     "clipboard": "^2.0.11",
     "gwm": "^0.5.0",
     "interactjs": "^1.10.27",
     "lodash-es": "^4.17.21",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "tailwind-scrollbar": "^3.1.0",
     "tiny-emitter": "^2.1.0",
     "vant": "^4.9.3",
-    "vue": "^3.3.8",
+    "vue": "^3.4.35",
     "vue-collapsed": "^1.3.3",
     "vue-i18n": "^9.8.0",
     "vue-request": "^2.0.4",
