--- a/vue3/package.json
+++ b/vue3/package.json
@@ -15,6 +15,7 @@
     "ant-design-vue": "^4.2.3",
     "axios": "^1.6.3",
     "clipboard": "^2.0.11",
+    "cropperjs": "^1.6.2",
     "gwm": "^0.5.0",
     "interactjs": "^1.10.27",
     "lodash-es": "^4.17.21",
