feat: #240816 h5签署合同路由

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -4215,3 +4215,8 @@ user_show_mobile:
     _controller: 'AppBundle:MobileMask:showMobile'
   methods:
     - POST
+
+contract_sign_mobile:
+  path: '/contract_sign/mobile'
+  defaults:
+    _controller: 'AppBundle:Contract:signMobile'
