--- a/vue3/package.json
+++ b/vue3/package.json
@@ -20,6 +20,7 @@
     "interactjs": "^1.10.27",
     "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
+    "smooth-signature": "^1.0.15",
     "tailwind-scrollbar": "^3.1.0",
     "tiny-emitter": "^2.1.0",
     "vant": "^4.9.3",
