--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /app/config/routing_plugins.yml
 /app/config/sentry.yml
 /app/config/session_redis.yml
+/app/config/proxy.php
 /web/themes/*
 /web/assets/libs/js-sdk/
 !/web/themes/autumn
@@ -75,3 +76,6 @@ yarn-error.log
 .package-lock.json
 /js-sdk
 .env.local
+.env
+docker-compose.yml
+docker/
