--- a/h5/package.json
+++ b/h5/package.json
@@ -99,6 +99,7 @@
     "script-ext-html-webpack-plugin": "^2.1.4",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "smooth-signature": "^1.0.15",
     "swiper": "^5.4.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "uglifyjs-webpack-plugin": "^1.1.1",
