--- a/vue3/package.json
+++ b/vue3/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.4",
     "tailwind-scrollbar": "^3.1.0",
     "tiny-emitter": "^2.1.0",
+    "vanilla-picker": "^2.12.3",
     "vant": "^4.9.3",
     "vue": "^3.3.8",
     "vue-collapsed": "^1.3.3",
