--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "es5-shim": "4.5.9",
     "es6-promise": "4.0.5",
     "font-awesome": "4.6.3",
+    "gwm": "^0.5.0",
     "handlebars": "4.0.11",
     "html2canvas": "^1.4.1",
     "html5shiv": "3.7.3",
