--- a/vue3/package.json
+++ b/vue3/package.json
@@ -8,27 +8,9 @@
   },
   "packageManager": "npm",
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
-    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "ant-design-vue": "^4.0.8",
-    "axios": "^1.6.3",
-    "clipboard": "^2.0.11",
-    "gwm": "^0.5.0",
-    "interactjs": "^1.10.27",
-    "lodash-es": "^4.17.21",
-    "moment": "^2.29.4",
-    "tailwind-scrollbar": "^3.1.0",
-    "tiny-emitter": "^2.1.0",
     "vanilla-picker": "^2.12.3",
-    "vant": "^4.9.3",
-    "vue": "^3.3.8",
-    "vue-collapsed": "^1.3.3",
-    "vue-i18n": "^9.8.0",
-    "vue-request": "^2.0.4",
-    "vue-router": "^4.2.5",
-    "vuedraggable": "4.1.0",
-    "xlsx": "^0.18.5"
+    "vue": "^3.3.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
@@ -45,6 +27,6 @@
   "scripts": {
     "serve": "cross-env NODE_ENV=development nodemon --max_old_space_size=4096 node_modules/@codeages/webpack-vue3/dist/webpack.dev.js",
     "serve:analyzer": "npm run serve analyzer:true",
-    "build": "cross-env NODE_ENV=production nodemon --max_old_space_size=4096 node_modules/@codeages/webpack-vue3/dist/webpack.prod.js"
+    "build": "cross-env NODE_ENV=production node --max_old_space_size=4096 node_modules/@codeages/webpack-vue3/dist/webpack.prod.js"
   }
 }
