--- a/h5/package.json
+++ b/h5/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "eslint-plugin-vuefix": "^0.2.0",
     "file-loader": "^1.1.4",
+    "gwm": "^0.5.0",
     "html-webpack-plugin": "3.2.0",
     "husky": "^4.2.5",
     "js-cookie": "^2.2.1",
