--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "html5shiv": "3.7.3",
     "iframe-resizer": "3.5.5",
     "intro.js": "2.4.0",
-    "item-bank": "^1.0.64",
     "jquery": "3.2.1",
     "jquery-base64": "^1.0.0",
     "jquery-blurr": "0.1.2",
@@ -112,6 +111,7 @@
     "vue-cropperjs": "4.2.0",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
+    "vue-slicksort": "1.2.0",
     "vuedraggable": "^2.24.3",
     "waypoints": "4.0.1",
     "websocket": "^1.0.25",
