--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -2204,6 +2204,10 @@ course_set_manage_course_tasks:
     path: '/course_set/{courseSetId}/manage/course/{courseId}/tasks'
     defaults:
         _controller: 'AppBundle:Course/CourseManage:tasks'
+course_set_manage_course_question:
+  path: '/course_set/{courseSetId}/manage/course/{courseId}/question'
+  defaults:
+    _controller: 'AppBundle:Course/CourseManage:question'
 course_set_manage_course_replay:
     path: '/course_set/{courseSetId}/manage/course/{courseId}/replay'
     defaults:
