--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -2811,6 +2811,10 @@ classroom_manage_courses:
     path: '/classroom/{id}/manage/courses'
     defaults:
         _controller: 'AppBundle:Classroom/ClassroomManage:courses'
+classroom_manage_item_bank:
+  path: '/classroom/{id}/manage/itemBank'
+  defaults:
+    _controller: 'AppBundle:Classroom/ClassroomManage:itemBank'
 classroom_manage_course_remove:
     path: '/classroom/{id}/manage/course/{courseId}/remove'
     defaults:
