--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1832,6 +1832,10 @@ course_activity_download:
     path: '/course/{courseId}/activiy/{activityId}/download'
     defaults:
         _controller: 'AppBundle:Activity/Download:downloadFile'
+course_activity_download_file_preview:
+    path: '/course/{courseId}/activity/{activityId}/download_file/{materialId}/preview'
+    defaults:
+        _controller: 'AppBundle:Activity/Download:previewFile'
 course_manage_activity_manage_custom_route:
     path: '/course/{fromCourseId}/manage/activity_{mediaType}/{id}/{routeName}'
     defaults:
