feat: #108864 添加直播公开课详情页的目录

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1535,6 +1535,10 @@ open_course_explore:
     defaults:
         _controller: 'AppBundle:Explore:openCourse'
         category: ''
+open_course_comment:
+  path: '/open/course/{courseId}/comment'
+  defaults:
+    _controller: 'AppBundle:OpenCourse:comment'
 open_course_manage:
     path: '/open/course/{id}/manage'
     defaults:
