--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1765,11 +1765,11 @@ live_open_course_lesson_replay_upload:
     defaults:
         _controller: 'AppBundle:LiveOpenCourse:uploadModal'
 live_open_course_live_replay_entry:
-    path: '/open/course/{courseId}/lesson/{lessonId}/live/replay/{replayId}/entry'
+    path: '/open/course/{courseId}/lesson/{lessonId}/live_replay_entry'
     defaults:
         _controller: 'AppBundle:LiveOpenCourse:entryReplay'
 live_open_course_live_replay_url:
-    path: '/open/course/{courseId}/lesson/{lessonId}/live/replay/{replayId}/url'
+    path: '/open/course/{courseId}/lesson/{lessonId}/live/replay/url'
     defaults:
         _controller: 'AppBundle:LiveOpenCourse:getReplayUrl'
 live_open_lesson_time_check:
