feat: #110376 移动学习计划目录

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -27,6 +27,7 @@ imports:
     -
         resource: '@CustomBundle/Resources/config/services.yml'
     - { resource: "@MarketingMallBundle/Resources/config/services.yml" }
+    - { resource: "@AgentBundle/Resources/config/services.yml" }
 framework:
     translator:
         fallback: '%locale%'
