feat: #110704 强制员工升级密码强度

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -135,7 +135,11 @@ login_check_email:
 password_init:
     path: '/password/init'
     defaults:
-        _controller: 'AppBundle:PasswordInit:initPassword'
+        _controller: 'AppBundle:Password:initPassword'
+password_upgrade:
+    path: '/password/upgrade'
+    defaults:
+      _controller: 'AppBundle:Password:upgradePassword'
 common_qrcode:
     path: '/common/qrcode'
     defaults:
