--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -2212,6 +2212,10 @@ course_set_manage_course_item_bank:
   path: '/course_set/{courseSetId}/manage/course/{courseId}/itemBank'
   defaults:
     _controller: 'AppBundle:Course/CourseManage:itemBank'
+course_set_manage_course_ai_companion_study:
+  path: '/course_set/{courseSetId}/manage/course/{courseId}/aiCompanionStudy'
+  defaults:
+    _controller: 'AppBundle:Course/CourseManage:aiCompanionStudy'
 course_set_manage_course_replay:
     path: '/course_set/{courseSetId}/manage/course/{courseId}/replay'
     defaults:
