feat: #250319 课程计划管理伴学助手配置接口

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -443,3 +443,12 @@ services:
         tags:
             -
                 name: twig.extension
+    web.twig.ai_extension:
+        class: AppBundle\Twig\AIExtension
+        arguments:
+            - '@service_container'
+            - '@biz'
+        public: true
+        tags:
+            -
+                name: twig.extension
