feat: #250321 修改agent worker实现方式

--- a/app/config/parameters_default.yml
+++ b/app/config/parameters_default.yml
@@ -43,6 +43,7 @@ parameters:
         - '/cashier/wechat/notify'
         - '/agreement/course/purchase'
         - 'disclaimers'
+        - '/agent_worker'
 
     qrcode_protocol_whitelist_default:
         - 'weixin'
