--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -4243,3 +4243,7 @@ user_show_mobile:
     _controller: 'AppBundle:MobileMask:showMobile'
   methods:
     - POST
+agent_worker:
+  path: '/agent_worker'
+  defaults:
+    _controller: 'AppBundle:AgentWorker:index'
