--- a/src/AppBundle/Resources/config/routing_admin_v2.yml
+++ b/src/AppBundle/Resources/config/routing_admin_v2.yml
@@ -3619,3 +3619,7 @@ admin_setting_api_key_update:
     _controller: 'AppBundle:AdminV2/System/ApiSetting:apiKeyUpdate'
   permissions:
     - admin_v2_API_setting
+admin_v2_secondary_verification:
+    path: '/secondary/verification'
+    defaults:
+        _controller: 'AppBundle:SecondaryVerification/SecondaryVerification:index'
