--- a/h5/package.json
+++ b/h5/package.json
@@ -138,5 +138,8 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.18.0"
+  },
+  "volta": {
+    "node": "14.21.3"
   }
 }
