feat: #250407 分析知识薄弱点回调

--- a/app/config/parameters_default.yml
+++ b/app/config/parameters_default.yml
@@ -44,6 +44,7 @@ parameters:
         - '/agreement/course/purchase'
         - 'disclaimers'
         - '/agent_worker'
+        - '/workflow_callback/analysis-weaknesses'
 
     qrcode_protocol_whitelist_default:
         - 'weixin'
