feat: #111011 新增班级导出弹窗

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -4239,3 +4239,8 @@ user_show_mobile:
     _controller: 'AppBundle:MobileMask:showMobile'
   methods:
     - POST
+
+secondary_verification:
+    path: '/secondary/verification'
+    defaults:
+        _controller: 'AppBundle:SecondaryVerification/SecondaryVerification:index'
