--- a/src/AgentBundle/Resources/config/services.yml
+++ b/src/AgentBundle/Resources/config/services.yml
@@ -9,3 +9,9 @@ services:
     arguments: [ '@biz' ]
     tags:
       - { name: codeages_plugin.event.subscriber }
+
+  study_plan_event_subscriber:
+    class: AgentBundle\Biz\StudyPlan\Event\StudyPlanEventSubscriber
+    arguments: [ '@biz' ]
+    tags:
+      - { name: codeages_plugin.event.subscriber }
