--- a/package.json
+++ b/package.json
@@ -105,8 +105,10 @@
     "typeahead.js": "0.11.1",
     "ua-parser-js": "^0.7.17",
     "v-clipboard": "^2.2.3",
+    "v-viewer": "^1.5.1",
     "vant": "^2.13.2",
     "video.js": "4.10.2",
+    "viewerjs": "^1.11.7",
     "vue": "2.6.11",
     "vue-cropperjs": "4.2.0",
     "vue-lazyload": "^1.3.3",
