--- a/vue3/package.json
+++ b/vue3/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^11.1.0",
     "ant-design-vue": "^4.2.3",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.1",
     "smooth-signature": "^1.0.15",
     "vanilla-picker": "^2.12.3",
     "vue": "^3.4.35",
