--- a/src/AppBundle/Resources/config/routing_admin_v2.yml
+++ b/src/AppBundle/Resources/config/routing_admin_v2.yml
@@ -3623,3 +3623,7 @@ admin_v2_secondary_verification:
     path: '/secondary/verification'
     defaults:
         _controller: 'AppBundle:SecondaryVerification/SecondaryVerification:index'
+admin_v2_question_tag_manage:
+    path: '/question/tag/manage'
+    defaults:
+        _controller: 'AppBundle:AdminV2/Teach/QuestionTag:index'
