--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -3930,6 +3930,10 @@ item_bank_exercise_manage_wrong_questions:
     path: '/item_bank_exercise/{exerciseId}/manage/wrong_questions'
     defaults:
         _controller: 'AppBundle:ItemBankExercise/StudentManage:wrongQuestions'
+item_bank_exercise_manage_ai_companion_study:
+    path: '/item_bank_exercise/{exerciseId}/manage/ai_companion_study'
+    defaults:
+        _controller: 'AppBundle:ItemBankExercise/StudentManage:aiCompanionStudy'
 item_bank_exercise_manage_students_add:
     path: '/item_bank_exercise/{exerciseId}/manage/students/add'
     defaults:
