feat: #113175 管理后台，云资源可以按分类搜索，可以设置分类（前端）

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/runtime-corejs2": "^7.7.7",
-    "@codeages/design-vue": "^1.0.3",
     "@codeages/agent-web-sdk": "^1.2.0",
+    "@codeages/design-vue": "^1.0.3",
     "@codeages/math-editor": "^1.4.0",
     "@codeages/styles": "1.0.7",
     "@codeages/utils": "^1.0.2",
@@ -81,6 +81,7 @@
     "katex": "^0.16.9",
     "load-script": "^2.0.0",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "moment": "2.19.4",
     "nouislider": "9.1.0",
