feat(scripts): 添加轻量级开发脚本
- 新增 dev:lite 脚本，用于启动开发服务器并忽略主题、插件和捆绑文件
- 此脚本可提高开发速度，特别是在不需要加载完整环境时

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
   },
   "scripts": {
     "dev": "node webpack-build/dev.js",
+    "dev:lite": "npm run serve ignore:theme,plugin,bundle",
     "compile": "npm run build && cd vue3 && npm run build",
     "serve": "cross-env NODE_ENV=development nodemon --max_old_space_size=4096 node_modules/es-webpack-engine/dist/webpack.dev.js --parameters webpack.config.js",
     "build": "cross-env NODE_ENV=production node --max_old_space_size=4096 node_modules/es-webpack-engine/dist/webpack.prod.js --parameters webpack.config.js",
