--- a/h5/package.json
+++ b/h5/package.json
@@ -141,6 +141,7 @@
     "stylelint-scss": "^3.18.0"
   },
   "volta": {
-    "node": "14.21.3"
+    "node": "14.21.3",
+    "yarn": "1.22.22"
   }
 }
